Fixed Dark Mode Text Color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,3 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   /* overflow-x: hidden; */
 }
-
-/* .slick-track,
-.slick-slide {
-  border: 1px solid red;
-} */
